# embedded_home_work_3

./: README.md
hw3/hw3_1/: CMakeLists.txt  compile.sh  cpu_load.sh  ram_load.sh  run.sh  ssh_cpu
hw3/hw3_1/include/: hardware_monitor.h  ssh_connection.h
hw3/hw3_1/src/: hardware_monitor.backup.cpp  hardware_monitor.cpp  main.cpp  ssh_connection.cpp  ssh_cpu
hw3/hw3_2/IPC/FIFO/: fifo-receiver.sh  fifo-sender.sh  readme.txt
hw3/hw3_2/IPC/sharedMem/: readme.txt  shm-reader.cpp  shm-writer.cpp
hw3/hw3_2/IPC/signal/: readme.txt  signal-receiver.cpp  signal-sender.cpp
hw3/hw3_2/wifi/: connect_to_wifi.sh
hw3/hw3_2/wifi/auto_connection/: auto_connect_wifi.sh  cron_file  readme.txt
hw3/hw3_3/: readme.txt  simple-web-server.sh  webserver.service
hw3/test/: ssh.cpp  ssh_ls
